--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task 1</title>
+    <title>assignment</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <script src="product.ts"></script>
