--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
     <title>assignment</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <script src="product.ts"></script>
+    <!-- <script src="product.ts"></script> -->
 </head>
 
 <body>
@@ -20,11 +20,12 @@
         <h1>Product List</h1>
     </header>
     <main>
-        <ul>
+        <ul class="list">
             <li>Apple</li>
             <li>Banana</li>
             <li>Orange</li>
         </ul>
     </main>
 </body>
+
 </html>
